# rust-game

./: Cargo.toml  shell.nix
src/: main.rs
