[package]
name = "rust-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.29.0", features = [ "simd-stable", "debug-render-2d" ] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
